--- a/Module-42-knowledge-cafe/src/index.css
+++ b/Module-42-knowledge-cafe/src/index.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap');
 body{
-    font-family: "Exo 2", "sans-serif";
+    font-family: "Exo 2";
 }
