--- a/Module-45-react-router/src/index.css
+++ b/Module-45-react-router/src/index.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+/* 
+@layer components {
+  .btn-primary {
+    @apply py-2 px-5 bg-violet-500 text-white font-semibold rounded-full shadow-md hover:bg-violet-700 focus:outline-none focus:ring focus:ring-violet-400 focus:ring-opacity-75;
+  }
+}
+*/
+
 /*
 background-color: #1a1a1a;
 background-color: #242424;
