--- a/Module-45-react-router/src/index.css
+++ b/Module-45-react-router/src/index.css
@@ -14,6 +14,9 @@
   .customButtonOne{
     @apply border py-1 px-3 rounded-[4px] md:bg-white md:border-2 md:border-red-500 md:text-red-500 md:hover:bg-red-500 md:hover:text-white transition-all bg-red-500 md:w-auto w-[30%] text-center hover:bg-white hover:text-red-500
   }
+  .isActiveBtn{
+    @apply md:bg-red-500 md:text-white
+  }
 }
 
 /*
