--- a/Module-62-pagination/pagination-client/src/components/Shop/Shop.css
+++ b/Module-62-pagination/pagination-client/src/components/Shop/Shop.css
@@ -27,19 +27,12 @@
 }
 
 .pagination{
-    display: flex;
-    flex-direction: row;
-    justify-items: center;
-    justify-content: center;
-    gap: 0.3rem;
-    margin-bottom: 1.5rem;
+    text-align: center;
+    margin-bottom: 40px;
 }
-
-.pagination .selected-pag{
-    background-color: #FF9900;
+.pagination button{
+    margin-right: 10px;
 }
-
-.page-drop-down{
-    padding: 0 0.5rem;
-    border-radius: 0.5rem;
+.pagination .selected {
+    background-color: orange;
 }
